# desktop-pet

./: AGENTS.md  README.md  index.html  package-lock.json  package.json
.github/workflows/: build.yml
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
scripts/: generate-sample-pet.mjs  generate-sample-pet.ts  setup-mirrors.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: mod.rs  open.rs  search.rs
src/components/: AppSwitcher.tsx  PetSelector.tsx  PetWindow.tsx  ResultsList.tsx  SearchInput.tsx
src/core/: CommandPalette.tsx  registry.ts  types.ts  useKeyboardNav.ts
src/extensions/file-search/: index.ts
src/extensions/pet/: index.ts
src/pet/: behavior.ts  engine.ts  loader.ts  types.ts
